Fix issues with esc key

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,3 +41,6 @@ setw -g window-status-current-style 'bg=colour75 fg=colour16'
 
 # don't rename windows automatically
 set-option -g allow-rename off
+
+# remove esc key delay
+set -s escape-time 0
