--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,8 @@ unbind C-b
 bind C-w send-prefix
 
 # remap split commands
-bind L split-window -h
-bind J split-window -v
+bind L split-window -h -c "#{pane_current_path}"
+bind J split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
