Add mysticaltutor theme for Tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,19 +28,38 @@ bind r source-file ~/.tmux.conf
 
 # -----------------------------------------------------------------------------
 # UI
+# Theme copied from:
+# https://github.com/caksoylar/vim-mysticaltutor/blob/master/terminal/mysticaltutor.tmux
 
 # fix colors for Kakoune
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*col*:Tc"
-
-# status bar
-set -g status-position top
-set -g status-style 'bg=colour16 fg=colour75'
-set -g status-right ''
-setw -g window-status-current-style 'bg=colour75 fg=colour16'
 
 # don't rename windows automatically
 set-option -g allow-rename off
 
 # remove esc key delay
 set -s escape-time 0
+
+# status bar
+set-option -g status-justify left
+set-option -g status-position top
+set-option -g status-style bg=brightblack,fg=white
+set-option -g status-left '#[fg=red,bold] @#{session_name} '
+set-option -g status-right '#[bold]%H:%M:%S '
+
+set-option -wg window-status-format ' #[fg=brightmagenta]#{window_index}:#[default]#{window_name}#[fg=yellow]#{window_flags}'
+set-option -wg window-status-current-format ' #[fg=magenta,bold]#{window_index}:#[fg=brightwhite]#{window_name}#[fg=yellow]#{window_flags}'
+set-option -wg window-status-activity-style fg=red
+set-option -wg window-status-bell-style fg=red
+
+# copy mode
+set-option -wg mode-style bg=brightblack,fg=red,bold
+
+# panes
+set-option -g pane-border-style bg=black,fg=brightblack
+set-option -g pane-active-border-style bg=black,fg=white
+
+# statusbar
+# messages
+set-option -g message-style fg=yellow,bg=brightblack
