--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,16 +45,22 @@ set -s escape-time 0
 set-option -g status-justify left
 set-option -g status-position top
 set-option -g status-style bg=brightblack,fg=white
-set-option -g status-left '#[fg=red,bold] @#{session_name} '
+# Original, modified since WT doesn't support bold
+# set-option -g status-left '#[fg=red,bold] @#{session_name} '
+set-option -g status-left '#[fg=red] @#{session_name} '
 set-option -g status-right '#[bold]%H:%M:%S '
 
 set-option -wg window-status-format ' #[fg=brightmagenta]#{window_index}:#[default]#{window_name}#[fg=yellow]#{window_flags}'
-set-option -wg window-status-current-format ' #[fg=magenta,bold]#{window_index}:#[fg=brightwhite]#{window_name}#[fg=yellow]#{window_flags}'
+# Original, modified since WT doesn't support bold
+# set-option -wg window-status-current-format ' #[fg=magenta,bold]#{window_index}:#[fg=brightwhite]#{window_name}#[fg=yellow]#{window_flags}'
+set-option -wg window-status-current-format ' #[fg=magenta]#{window_index}:#[fg=brightwhite]#{window_name}#[fg=yellow]#{window_flags}'
 set-option -wg window-status-activity-style fg=red
 set-option -wg window-status-bell-style fg=red
 
 # copy mode
-set-option -wg mode-style bg=brightblack,fg=red,bold
+# Original, modified since WT doesn't support bold
+# set-option -wg mode-style bg=brightblack,fg=red,bold
+set-option -wg mode-style bg=brightblack,fg=red
 
 # panes
 set-option -g pane-border-style bg=black,fg=brightblack
