--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,9 @@ set -g status-keys vi
 # reload config file
 bind r source-file ~/.tmux.conf
 
+# Display ID
+set -s command-alias[0] did="display-message -p '#{session_id}:#{window_id}.#{pane_id}'"
+
 # -----------------------------------------------------------------------------
 # UI
 # Theme copied from:
