Update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,19 @@
-# -----------------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 # Key Mappings
 
+# reload config file
+bind r source-file ~/.tmux.conf
+
 # remap prefix
-set -g prefix C-w
 unbind C-b
+set-option -g prefix C-w
 bind C-w send-prefix
 
 # remap split commands
-bind L split-window -h -c "#{pane_current_path}"
-bind J split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
+bind L split-window -h -c "#{pane_current_path}"
+bind J split-window -v -c "#{pane_current_path}"
 
 # remap select-pane commands
 bind h select-pane -L
@@ -20,19 +23,17 @@ unbind l # unbind switch to last window
 bind l select-pane -R
 
 # vi key bindings
-set -g mode-keys vi
-set -g status-keys vi
-
-# reload config file
-bind r source-file ~/.tmux.conf
+set-option -g mode-keys vi
+set-option -g status-keys vi
 
 # Display ID
-set -s command-alias[0] did="display-message -p '#{session_id}:#{window_id}.#{pane_id}'"
+set-option -s command-alias[0] did="display-message -p '#{session_id}:#{window_id}.#{pane_id}'"
 
-# -----------------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 # UI
-# Theme copied from:
-# https://github.com/caksoylar/vim-mysticaltutor/blob/master/terminal/mysticaltutor.tmux
+
+# remove esc key delay
+set -s escape-time 0
 
 # fix colors for Kakoune
 set -g default-terminal "tmux-256color"
@@ -41,8 +42,9 @@ set -ga terminal-overrides ",*col*:Tc"
 # don't rename windows automatically
 set-option -g allow-rename off
 
-# remove esc key delay
-set -s escape-time 0
+# ------------------------------------------------------------------------------
+# Theme
+# https://github.com/caksoylar/vim-mysticaltutor/blob/master/terminal/mysticaltutor.tmux
 
 # status bar
 set-option -g status-justify left
