Change initial starting size to fullscreen in mintty config

--- a/.minttyrc
+++ b/.minttyrc
@@ -5,8 +5,7 @@ Locale=en_US
 Charset=UTF-8
 Font=Cascadia Code PL
 FontHeight=11
-Columns=127
-Rows=55
+Window=max
 Term=xterm
 BoldAsFont=yes
 BoldAsColour=no
