Update tmux config colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,32 +45,28 @@ set-option -g allow-rename off
 # ------------------------------------------------------------------------------
 # Theme
 # https://github.com/caksoylar/vim-mysticaltutor/blob/master/terminal/mysticaltutor.tmux
+# NOTE: The colors here have been modified to specify hex values rather than relying on
+#       keywords defined by the containing terminal emulator.
 
 # status bar
 set-option -g status-justify left
 set-option -g status-position top
-set-option -g status-style bg=brightblack,fg=white
-# Original, modified since WT doesn't support bold
-# set-option -g status-left '#[fg=red,bold] @#{session_name} '
-set-option -g status-left '#[fg=red] @#{session_name} '
+set-option -g status-style bg="#30343c",fg="#d9d9d9"
+set-option -g status-left '#[fg=#e07093,bold] @#{session_name} '
 set-option -g status-right '#[bold]%H:%M:%S '
 
-set-option -wg window-status-format ' #[fg=brightmagenta]#{window_index}:#[default]#{window_name}#[fg=yellow]#{window_flags}'
-# Original, modified since WT doesn't support bold
-# set-option -wg window-status-current-format ' #[fg=magenta,bold]#{window_index}:#[fg=brightwhite]#{window_name}#[fg=yellow]#{window_flags}'
-set-option -wg window-status-current-format ' #[fg=magenta]#{window_index}:#[fg=brightwhite]#{window_name}#[fg=yellow]#{window_flags}'
-set-option -wg window-status-activity-style fg=red
-set-option -wg window-status-bell-style fg=red
+set-option -wg window-status-format ' #[fg=#b1a3df]#{window_index}:#[default]#{window_name}#[fg=#bb8e67]#{window_flags}'
+set-option -wg window-status-current-format ' #[fg=#8b5fc7,bold]#{window_index}:#[fg=#ffffff]#{window_name}#[fg=#bb8e67]#{window_flags}'
+set-option -wg window-status-activity-style fg="#e07093"
+set-option -wg window-status-bell-style fg="#e07093"
 
 # copy mode
-# Original, modified since WT doesn't support bold
-# set-option -wg mode-style bg=brightblack,fg=red,bold
-set-option -wg mode-style bg=brightblack,fg=red
+set-option -wg mode-style bg="#30343c",fg="#e07093",bold
 
 # panes
-set-option -g pane-border-style bg=black,fg=brightblack
-set-option -g pane-active-border-style bg=black,fg=white
+set-option -g pane-border-style bg="#1e2227",fg="#30343c"
+set-option -g pane-active-border-style bg="#1e2227",fg="#d9d9d9"
 
 # statusbar
 # messages
-set-option -g message-style fg=yellow,bg=brightblack
+set-option -g message-style fg="#bb8e67",bg="#30343c"
