Sync w/ work laptop

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,6 +28,9 @@ set-option -g status-keys vi
 
 # Display ID
 set-option -s command-alias[0] did="display-message -p '#{session_id}:#{window_id}.#{pane_id}'"
+# Copy ID
+set-option -s command-alias[0] cpid="display-message -p '#{session_id}:#{window_id}.#{pane_id}'; send 'D'"
+bind I "cpid"
 
 # ------------------------------------------------------------------------------
 # UI
