sync improved tmux bindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,8 +19,9 @@ bind J split-window -v -c "#{pane_current_path}"
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
-unbind l # unbind switch to last window
-bind l select-pane -R
+bind l select-pane -R # rebind switch to last window
+
+bind \; last-window # rebind switch to last pane
 
 # vi key bindings
 set-option -g mode-keys vi
@@ -29,7 +30,7 @@ set-option -g status-keys vi
 # Display ID
 set-option -s command-alias[0] did="display-message -p '#{session_id}:#{window_id}.#{pane_id}'"
 # Copy ID
-set-option -s command-alias[0] cpid="display-message -p '#{session_id}:#{window_id}.#{pane_id}'; send 'D'"
+set-option -s command-alias[1] cpid="display-message -p '#{session_id}:#{window_id}.#{pane_id}'; send 'D'"
 bind I "cpid"
 
 # ------------------------------------------------------------------------------
